Bug 1392641 Check return value for functions declared with warn_unused_result r=bagder,nwgh

MozReview-Commit-ID: BJj3Lvtntd6